# herbarium-pipeline

./: .gitignore  README.md  download_gbif_images.py  filter_and_crop_herbarium.py  herbarium_pipeline_gui.py  herbarium_pipeline_webui.py  identify_herbarium.py  pod_bootstrap.sh  pyproject.toml  rebuild_specsin.py  resize_images.py  train_herbarium.py
