[project]
name = "herbarium-pipeline"
version = "0.1.0"
description = "Herbarium image classification pipeline — download, filter, crop, resize, train, identify."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Core ML
    "torch>=2.3",
    "torchvision>=0.18",
    "pytorch-lightning>=2.2",
    "torchmetrics>=1.3",
    "timm>=1.0",
    "transformers>=4.40",  # CLIP for filter_and_crop

    # Data / numerics
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",

    # Image I/O
    "pillow>=10.0",
    "opencv-python-headless>=4.9",

    # Experiment tracking
    "wandb>=0.16",

    # CLI / progress
    "tqdm>=4.66",

    # Web UI
    "nicegui>=2.0",
]

[project.optional-dependencies]
# DALI is installed separately because the wheel name depends on the
# target CUDA version (e.g. nvidia-dali-cuda120). See pod_bootstrap.sh.
# Kept here as a hint, not a hard dep.
dali = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
]

[tool.uv]
# Allow uv to resolve PyTorch from the default PyPI index. On Linux this
# pulls the CUDA-enabled wheels; on macOS it pulls MPS. If you later want
# to pin a specific CUDA build, add a [tool.uv.sources] entry for torch
# pointing at https://download.pytorch.org/whl/cu121 (or similar).
